@@ -4,7 +4,7 @@
 
 pkgname="chromium-libpdf"
 #The pkgver is the same as for google chrome dev. The library isn't meant to be distributed on its own, and no version information exists.
-pkgver="29.0.1535.3"
+pkgver="29.0.1541.2"
 pkgrel="1"
 pkgdesc="A PDF Viewer for Chromium and Chromium-based browsers"
 url="http://wiki.archlinux.org/index.php/Chromium#libpdf.so"
@@ -17,10 +17,10 @@ optdepends=("chromium: default browser to use plugin in"
 sha512sums=("2d09d2ca3c960f38463ed742a2f038e919363fe2cb8d65d86cd4672559b44369037d94f9a09ede478fadd20b4a6dc9271e8d1af1f2cc2bc92ed90d0a4810ac67")
 if [ "$CARCH" = "i686" ]; then
 	_arch="i386"
-    sha512sums+=("6dc3b439db881cffd10c702e4224ab9fbf018f05cdd0c7d45187457db272029fe494a603c08a8ced5102c1084f57cf204792ae77faff4a5710af8f29fb137aca")
+    sha512sums+=("8a7685495953cbae1034db291031f4d82c4c643e14814745af038f816efa9d6e0c377ddcf9e36e1140221608481cad3bd6fa53843bb051aaf7acd1f9570b50ff")
 elif [ "$CARCH" = "x86_64" ]; then
 	_arch="amd64"
-	sha512sums+=("8420d748fd01dcb7a142073f5ca760b407eee5e3334b41fb05a2f2a2739636faafe4a47c520dc9fb27a5fbbd9c9f6231b6336ae85556d8ad27b694d1df969773")
+	sha512sums+=("f004f2bc01e0d9aabdb08b03f2da49447878aab4cfc9158750e2702228db7d6088cf0ff084236cb7fd1ac3b60a44618e465665e01ede90960c9150d4a4f03ce7")
 fi
 source=(LICENSE
 		"https://dl.google.com/linux/direct/google-chrome-unstable_current_$_arch.deb")
