@@ -1,13 +1,13 @@
-# Maintainer: Panagiotis Mavrogiorgos (pmav99) <> (gmail)
+# Maintainer: Ilias Stamatis (stamatis.iliass) <> (gmail)
 
 pkgname=ffmulticonverter
 pkgver=1.5.2
-pkgrel=1
+pkgrel=2
 pkgdesc="FF Multi Converter is a GUI application that converts multiple file formats to different extensions"
 arch=(any)
 url="http://sites.google.com/site/ffmulticonverter/"
 license=('GPL')
-depends=('python2' 'python2-pyqt')
+depends=('python2' 'python2-pyqt4')
 optdepends=('unoconv' 'python2-pythonmagick' 'ffmpeg')
 makedepends=('git')
 provides=('ffmulticonverter')
@@ -15,7 +15,7 @@ conflicts=('ffmulticonverter-git')
 replaces=()
 backup=()
 options=(!emptydirs)
-source=(http://surfnet.dl.sourceforge.net/project/ffmulticonv/$pkgname-$pkgver.tar.gz)
+source=(https://sourceforge.net/projects/ffmulticonv/files/$pkgname-$pkgver.tar.gz)
 md5sums=('c1e1c89201cb25a9ae89456f0076b0fe')
 
 package()
