@@ -1,13 +1,13 @@
 # Maintainer: jianqun <jianqun@chinesemail.net>
 
 pkgname=greybird-themes
-pkgver=20130614
+pkgver=20130618
 pkgrel=1
 pkgdesc="Desktop Suite for Xfce."
 arch=('any')
 url="https://github.com/shimmerproject/Greybird"
 license=('GPL2' 'CCPL:cc-by-sa-3.0')
-depends=('gtk-engine-murrine' 'gtk-engine-unico')
+depends=('gtk-engine-murrine')
 optdepends=('elementary-icons: icon theme designed to be smooth, sexy, clear, and efficient.')
 conflicts=('xfce-theme-greybird' 'xfce-theme-greybird-git')
 source=('https://github.com/shimmerproject/Greybird/archive/master.tar.gz')
@@ -15,7 +15,7 @@ md5sums=('SKIP')
 
 package() {
     cd "$srcdir/Greybird-master/"
-    install -d "$pkgdir/usr/share/themes/Greybird"
     rm -f {.gitignore,LICENSE.CC,LICENSE.GPL,README}
+    install -d "$pkgdir/usr/share/themes/Greybird"
     cp -Rf . "$pkgdir/usr/share/themes/Greybird/"
 }
