@@ -1,0 +1,6 @@
+arch-hxtools
+============
+
+  ArchLinux PKGBUILD for hxtools from http://inai.de/projects/hxtools/
+
+  The package source build is submitted to AUR at: https://aur.archlinux.org/packages/hxtools/
