@@ -1,7 +1,7 @@
 # Maintainer: Yoel Lion <yoel3ster at gmail dot com>
 
 pkgname=orayta-books-svn
-pkgver=483
+pkgver=638
 pkgrel=1
 pkgdesc="Orayta books"
 arch=('any')
