@@ -1,7 +1,7 @@
 # Maintainer: Yoel Lion <yoel3ster at gmail dot com>
 
 pkgname=orayta-svn
-pkgver=481
+pkgver=645
 pkgrel=1
 pkgdesc="Jewish books program with Hebrew & French translations"
 arch=('i686' 'x86_64')
@@ -25,14 +25,10 @@ fi
   msg "SVN checkout done or server timeout"
   msg "Starting make..."
 cd $srcdir/$_svnmod
-sed -i '10,15d' Orayta.pro
-qmake
+#sed -i '10,15d' Orayta.pro
+qmake-qt4
 make 
-install -Dm 755 $_svnmod $pkgdir/usr/bin/$_svnmod
-install -Dm 644 Orayta.desktop $pkgdir/usr/share/applications/Orayta.desktop
-install -Dm 644 Icons/Orayta.png $pkgdir/usr/share/Orayta/Orayta.png
-install -Dm 644 Hebrew.qm $pkgdir/usr/share/Orayta/Hebrew.qm
-install -Dm 644 French.qm $pkgdir/usr/share/Orayta/French.qm
-install -Dm 644 License.txt $pkgdir/usr/share/licenses/$_svnmod/LICENSE
+make INSTALL_ROOT=${pkgdir} install
+rm -rf $srcdir/$_svnmod
 }
 
