@@ -2,7 +2,7 @@
 # Contributor: Sergey Mastykov <smastykov[at]gmail[dot]com>
 
 pkgname=pycharm
-pkgver=2.7.2
+pkgver=2.7.3
 pkgrel=1
 pkgdesc="Powerful Python and Django IDE. 30-day free trial."
 arch=('any')
@@ -11,9 +11,9 @@ url="http://www.jetbrains.com/pycharm/"
 license=('Commercial')
 depends=('java-environment>=6')
 source=(http://download.jetbrains.com/python/$pkgname-$pkgver.tar.gz)
-sha256sums=('668544ea2c6b06fc202863ec21acd6da2fdebc258ee2e61c399314763cef1b69')
+sha256sums=('92023a5fd545e2f3752b935663af88203908713de9c4391fbb40f9a4b5419475')
 
-build() {
+package() {
   cd $srcdir
   mkdir -p $pkgdir/opt/$pkgname || return 1
   cp -R $srcdir/$pkgname-$pkgver/* $pkgdir/opt/$pkgname || return 1
