@@ -2,7 +2,7 @@
 
 pkgname=tor-alpha
 pkgver=0.2.4.13
-pkgrel=1
+pkgrel=2
 pkgdesc='Anonymizing overlay network in its alpha version'
 arch=('i686' 'x86_64')
 url='http://www.torproject.org/'
@@ -13,6 +13,8 @@ backup=('etc/tor/torrc'
         'etc/tor/torrc-dist'
         'etc/tor/tor-tsocks.conf')
 install='tor.install'
+provides='tor'
+conflicts='tor'
 source=("http://www.torproject.org/dist/tor-${pkgver}-alpha.tar.gz"{,.asc}
         'torrc'
         'tor.service')
