@@ -1,6 +1,12 @@
-2013-06-11 Build User <jenkins@coast-project.org>
+2013-06-18 Build User <jenkins@coast-project.org>
 
       
+      PKGBUILD prepared for new jenkins-ci version 1.519
+
+
+2013-06-11 Build User <jenkins@coast-project.org>
+
+      jenkins-ci-1.518-1:
       PKGBUILD prepared for new jenkins-ci version 1.518
 
 
